--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@
 # [[file:~/Workspace/Programming/structure-predication/magman/magman.note::*cargo.toml][cargo.toml:1]]
 [package]
 name = "magman"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2018"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 
@@ -13,6 +13,7 @@ quicli = "0.4"
 structopt = "0.2"
 genevo = "0.4"
 # genevo = { git = "https://github.com/ybyygu/genevo.git" }
+gosh-db = {version = "*", path = "../../gosh-rs/database"}
 rand = "0.7"
 csv = "1.1"
 serde = {version="1.0", features = ["derive"]}
