--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@
 # [[file:~/Workspace/Programming/structure-predication/magman/magman.note::*cargo.toml][cargo.toml:1]]
 [package]
 name = "magman"
-version = "0.0.2"
+version = "0.0.3"
 edition = "2018"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 
@@ -18,7 +18,10 @@ rand = "0.7"
 csv = "1.1"
 serde = {version="1.0", features = ["derive"]}
 serde_json = "1.0"
-toml = "*"
-fixedbitset = "*"
-lazy_static = "*"
+toml = "0.5"
+lazy_static = "1.3"
+
+[dev-dependencies]
+tempfile = "3"
+duct = "0.12"
 # cargo.toml:1 ends here
