--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ csv = "1.1"
 serde = {version="1.0", features = ["derive"]}
 serde_json = "1.0"
 toml = "0.5"
+pager = "0.15"
 lazy_static = "1.3"
 
 [dev-dependencies]
