--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
-# [[file:~/Workspace/Programming/structure-predication/magman/magman.note::*cargo][cargo:1]]
+# [[file:magman.note::66f2d490][66f2d490]]
 [package]
 name = "magman"
 version = "0.0.13"
-edition = "2018"
+edition = "2021"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 
 [dependencies]
-rand = "0.7"
+rand = "0.8"
 csv = "1.1"
 serde = {version="1.0", features = ["derive"]}
 serde_json = "1.0"
 toml = "0.5"
-pager = "0.15"
+pager = "0.16"
 lazy_static = "1.3"
 structopt = "0.3"
 spdkit = {version = "0.0.18"}
@@ -19,5 +19,5 @@ gut = {version="0.1", package="gchemol-gut"}
 gosh-db = {version = "0.0.8", package="gosh-database"}
 
 [dev-dependencies]
-tempfile = "3"
-# cargo:1 ends here
+tempfile = "3.3"
+# 66f2d490 ends here
