--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,9 @@ clap = { version = "3.0.10", features = ["derive"] }
 tempfile = "3.3"
 slotmap = { version = "1.0", features = ["serde"] }
 bimap = { version = "0.6", features = ["serde"]}
+# https://docs.rs/spmc/latest/spmc/
 spmc = "0.3.0"
+crossbeam-channel = "0.5"
 
 [dev-dependencies]
 
