--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 # [[file:magman.note::66f2d490][66f2d490]]
 [package]
 name = "magman"
-version = "0.0.17"
+version = "0.0.18"
 edition = "2021"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 
@@ -28,6 +28,8 @@ bimap = { version = "0.6", features = ["serde"]}
 # https://docs.rs/spmc/latest/spmc/
 spmc = "0.3.0"
 crossbeam-channel = "0.5"
+warp = "0.3"
+reqwest = { version="0.11", default-features = false, features=["json", "blocking", "rustls-tls"]}
 
 [dev-dependencies]
 
